_hands-on/infra/manifest/platform-permissive.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: platform-permissive
  namespace: platform
spec:
  mtls:
    mode: PERMISSIVE
