_hands-on/infra/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-gen-node-service
  namespace: hands-on-lab
spec:
  selector:
    app: load-gen-node
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
